feat: renderer for releases provides information about release platforms